[package]
name = "read_parquet"
version = "0.1.0"
authors = ["Tim Toebrock"]
license = "MIT"
edition = "2021"
description = """
Print out a parquet dataframe in the command-line.
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.4", features = ["derive"] }
string_dataframe = "0.1.0"
